...
            android:layout_height="match_parent"
            android:elevation="6dp">

            <Button
                style="@style/MyButton"
                android:text="Ponuda"
                android:id="@+id/ponudaBtn"
                android:layout_marginTop="30dp" />

            <Button
                style="@style/MyButton"
                android:text="Potražnja"
                android:id="@+id/potraznjaBtn"
                android:background="@color/bright_foreground_inverse_material_light"
                android:textColor="@color/material_deep_teal_500" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
